# neural-networks-hw2

./: .gitignore  CMakeLists.txt  README.md
include/CommonLib/: LogHandler.hpp  basicFuncs.hpp  basicStructs.hpp  cifarHandlers.hpp  eventTimer.hpp
include/MLP/: ActivationFunctions.hpp  MultiBinaryMLP.hpp  NewLayer.hpp  NewMLP.hpp  SimpleMLP.hpp
include/SVM/: Configure.hpp  Kernels.hpp  MultiClassSVM.hpp  SVM.hpp
misc/jobs/: linear_sweep.sh  poly2_sweep.sh  poly3_sweep.sh  poly4_sweep.sh  rbf_test_sweep.sh
misc/jobs/1v1/: linear_sweep.sh  local_bash.sh  poly2_sweep.sh  poly3_sweep.sh  rbf_test_sweep.sh
misc/jobs/multiclass/: linear_mult_sweep.sh  poly2_mult_sweep.sh  poly3_mult_sweep.sh  poly4_mult_sweep.sh  rbf_mult_sweep.sh
misc/python_scripts/: hw1_plots.py  time_means.py
scripts/: test2ClassSVM.cpp  testMBMLP.cpp  testMLP.cpp  testMLP_Adam.cpp  testMultiSVM.cpp  testSimpleMLP.cpp  testStoredModel.cpp  trash_test.cpp
src/CommonLib/: CMakeLists.txt  LogHandler.cpp  basicFuncs.cpp  cifarHandlers.cpp  eventTimer.cpp
src/MLP/: ActivationFunctions.cpp  CMakeLists.txt  MultiBinaryMLP.cpp  NewLayer.cpp  NewMLP.cpp  SimpleMLP.cpp
src/SVM/: CMakeLists.txt  Configure.cpp  Kernels.cpp  MultiClassSVM.cpp  SVM.cpp
